--- a/src/counter/Counter.css
+++ b/src/counter/Counter.css
@@ -1,5 +1,42 @@
+.counter {
+  background-color: #274472;
+  border-radius: 20px;
+  min-width: 200px;
+  padding: 30px;
+  width: 40%;
+  margin: auto;
+  margin-top: 30px;
+}
+h1 {
+  color: white;
+}
+h2 {
+  color: white;
+}
+
+button {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  margin: 0 20px;
+  border: none;
+  font-weight: 600;
+  font-size: 25px;
+  color: #274472;
+}
+button:hover {
+    cursor: pointer;
+    background-color: white;
+}
+
 input {
   text-align: center;
+  height: 30px;
+  border-radius: 15px;
+  border: none;
+  font-weight: 900;
+  font-size: 18px;
+  color: #274472;
 }
 .green {
   color: green;
